--- a/webbutveckling/profile-card/index.html
+++ b/webbutveckling/profile-card/index.html
@@ -10,8 +10,8 @@
   <body>
     <article class="card">
       <img src="img/close.svg" class="close" alt="close" />
-      <img src="img/joker.jpg" class="profile" alt="person" />
-      <h1>Joker</h1>
+      <img src="img/pikachu.jpg" class="profile" alt="person" />
+      <h1>Pikachu</h1>
       <p>Kick Ass ...</p>
       <a href="https://www.imdb.com/title/tt7286456/">Tell me more</a>
     </article>
